jwt fix